[tool.poetry]
name = "week2-lab"
version = "0.1.0"
description = ""
authors = ["Ate Poorthuis <atepoorthuis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.2"
jupyter = "^1.0.0"
autopep8 = "^1.5.4"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
